--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 package.json
 style.scss
-style.map.css
+style.css.map
 package-lock.json
 /styles/*
-/sass-cache/*
+/.sass-cache/*
 /node_modules/*
